--- a/views/places.ejs
+++ b/views/places.ejs
@@ -89,7 +89,7 @@ function geocodeAddress(geocoder, resultsMap) {
 }
 </script>
 <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8XxHpTiGahEh6FerlaucPCWakDFoZrv0&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY0&callback=initMap">
 </script>  
 </body>
 </html>
